# Birli

./: .dockerignore  .gitattributes  .gitignore  .talismanrc  Cargo.toml  Dockerfile  Makefile.toml  README.md  RELEASES.md  build.rs  clippy.toml  spack.Dockerfile
.github/: dependabot.yml
.github/workflows/: bench.yml  clippy.yml  coverage.yml  cross_test.yml  docker.yml  docker_test.yml  linux_test.yml  macos_ci.yml  macos_test.yml  release.yml
benches/: bench.rs  expensive_benches.rs
data/: van_vleck_rho_coeffs.pkl
doc/: aoflagger_strategy_binding_issue.md  benchmark_results.md  cotter_timesteps.md  cotter_weights.md  geometric_corrections.md  releasing.md
examples/: preprocess.rs
include/: aoflagger.h  cxx_aoflagger.h
scripts/: time_birli.sh  time_cotter.sh
src/: calibration.rs  cli.rs  constants.rs  corrections.rs  cxx_aoflagger.cc  cxx_aoflagger.rs  delay_transform.rs  error.rs  flag_io.rs  flags.rs  lib.rs  main.rs  math.rs  metrics.rs  passband_gains.rs  pfb_gains.rs  preprocessing.rs  selection.rs  ssins.rs  test_common.rs  types.rs  util.rs  van_vleck.rs
src/coord/: azel.rs  enh.rs  hadec.rs  radec.rs  uvw.rs  xyz.rs
src/io/: aocal.rs  error.rs  mod.rs  mwaf.rs  uvfits.rs
src/jones/: mod.rs
src/pos/: azel.rs  earth.rs  enh.rs  error.rs  hadec.rs  lmn.rs  mod.rs  pal.rs  precess.rs  radec.rs  uvw.rs  xyz.rs
tests/: common.rs  integration.rs
tests/data/: README.md  adjust_gpufits.py  casa_dump_ms.py  common.py  dump_gpufits.py  dump_metafits.py  dump_mwaf.py  dump_uvfits.py  generate_test_data.py  pyuvdata_dump_csv.py  requirements.txt  subband-passband-128ch-unitary.txt  subband-passband-1536ch-unitary.txt  subband-passband-2ch-unitary.txt  subband-passband-3072ch-unitary.txt  subband-passband-32ch-cotter.txt  subband-passband-32ch-unitary.txt  subband-passband-384ch-unitary.txt
tests/data/1119683928_picket/: 1119683928.metafits  1119683928_metafits_ppds.fits
tests/data/1196175296_mwa_ord/: 1196175296.cotter.metafits  1196175296.metafits  1196175296.metafits.header.txt  1196175296.metafits.txt  1196175296.uvfits.header.txt  1196175296.uvfits.txt  1196175296_20171201145440_gpubox01_00.fits  1196175296_20171201145440_gpubox01_00.fits.header.txt  1196175296_20171201145440_gpubox01_00.fits.txt  1196175296_20171201145440_gpubox02_00.fits  1196175296_20171201145440_gpubox02_00.fits.header.txt  1196175296_20171201145440_gpubox02_00.fits.txt  1196175296_20171201145540_gpubox01_01.fits  1196175296_20171201145540_gpubox01_01.fits.header.txt  1196175296_20171201145540_gpubox01_01.fits.txt  1196175296_20171201145540_gpubox02_01.fits  1196175296_20171201145540_gpubox02_01.fits.header.txt  1196175296_20171201145540_gpubox02_01.fits.txt  1196175296_cotter-friendly.metafits  1196175296cotter-friendly.metafits  FlagfileCotter01.mwaf  FlagfileCotter01.mwaf.header.txt  FlagfileCotter01.mwaf.txt  FlagfileCotter02.mwaf  FlagfileCotter02.mwaf.header.txt  FlagfileCotter02.mwaf.txt  FlagfileCotterGeneric01.mwaf  FlagfileCotterGeneric01.mwaf.txt  FlagfileCotterGeneric02.mwaf  FlagfileCotterGeneric02.mwaf.txt  FlagfileCotterMWA01.mwaf.txt  FlagfileCotterMWA02.mwaf.txt  pyuvdata_1196175296.none.csv
tests/data/1196175296_mwa_ord/adjusted_-1/: 1196175296_20171201145440_gpubox01_00.fits  1196175296_20171201145440_gpubox01_00.fits.txt
tests/data/1196175296_mwa_ord/limited_1/: 1196175296_20171201145540_gpubox01_01.fits  1196175296_20171201145540_gpubox01_01.fits.txt
tests/data/1196175296_mwa_ord_seq/: 1196175296.metafits  1196175296_20171201145440_gpubox01_00.fits  1196175296_20171201145440_gpubox02_00.fits  1196175296_20171201145540_gpubox01_01.fits  1196175296_20171201145540_gpubox02_01.fits
tests/data/1247842824_flags/: 1247842824.cotter.metafits  1247842824.metafits  1247842824.metafits.header.txt  1247842824.metafits.txt  1247842824.uvfits.txt  1247842824_20190722150008_gpubox01_00.fits.txt  1247842824_h0.txt  1247842824cotter-friendly.metafits  Flagfile01_h0.txt  Flagfile01_h1.txt  FlagfileBirli01.mwaf  FlagfileBirli01_ts1.mwaf  FlagfileBirli01_ts2.mwaf  FlagfileCotterGeneric01.mwaf  FlagfileCotterGeneric01.mwaf.header.txt  FlagfileCotterGeneric01.mwaf.txt  FlagfileCotterMWA01.mwaf  FlagfileCotterMWA01.mwaf.header.txt  FlagfileCotterMWA01.mwaf.txt  README.md
tests/data/1254670392_avg/: 1254670392.cotter.cable.uvfits.csv  1254670392.cotter.cable.uvfits.txt  1254670392.cotter.corrected.ms.csv  1254670392.cotter.corrected.phase0.uvfits.csv  1254670392.cotter.corrected.uvfits.csv  1254670392.cotter.corrected.uvfits.txt  1254670392.cotter.geom.uvfits.csv  1254670392.cotter.geom.uvfits.txt  1254670392.cotter.none.avg_4s_160khz.ms.csv  1254670392.cotter.none.avg_4s_160khz.uvfits.csv  1254670392.cotter.none.avg_4s_160khz.uvfits.txt  1254670392.cotter.none.uvfits.csv  1254670392.cotter.none.uvfits.txt  1254670392.fixed.metafits  1254670392.fixed.metafits.txt  1254670392.metafits  1254670392.metafits.txt  pyuvdata_1254670392.none.csv  pyuvdata_1254670392.vvnoc.csv
tests/data/1297526432_mwax/: 1297526432.metafits  1297526432.metafits.header.txt  1297526432.metafits.txt  1297526432_20210216160014_ch117_000.fits  1297526432_20210216160014_ch117_000.fits.header.txt  1297526432_20210216160014_ch117_000.fits.txt  1297526432_20210216160014_ch117_001.fits  1297526432_20210216160014_ch117_001.fits.header.txt  1297526432_20210216160014_ch117_001.fits.txt  1297526432_20210216160014_ch118_000.fits  1297526432_20210216160014_ch118_000.fits.header.txt  1297526432_20210216160014_ch118_000.fits.txt  1297526432_20210216160014_ch118_001.fits  1297526432_20210216160014_ch118_001.fits.header.txt  1297526432_20210216160014_ch118_001.fits.txt  1297526432_dump.csv  1297526432_dump_hex.csv  1297526432_h0.txt  1297526432_h1.txt  1297526432cotter-friendly.metafits
tests/data/1439922144_deripple/: 1439922144.metafits
