[package]
name = "birli"
description = "Common preprocessing tasks for the Murchison Widefield Array Epoch of Reionization pipeline"
version = "0.2.1"
readme = "README.md"
homepage = "https://github.com/MWATelescope/Birli"
repository = "https://github.com/MWATelescope/Birli"
authors = [
    "Derwent McElhinney <derwent.mcelhinney@curtin.edu.au>",
    "Christopher H. Jordan <christopherjordan87@gmail.com>",
    "Greg Sleap <greg.sleap@curtin.edu.au>",
]
edition = "2018"
license = "MPL-2.0"
keywords = ["radioastronomy", "mwa", "astronomy", "aoflagger", "cotter"]
categories = ["science", "parsing"]
exclude = ["tests/*", ".vscode/*", ".github/*", ".talismanrc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["aoflagger"]
aoflagger = ["aoflagger_sys"]

[dependencies]
aoflagger_sys = { version= "0.1.*", optional = true }
cfg-if = "1.0.0"
clap = "2.33"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
env_logger = "0.9"
indicatif = { version = "0.16", features = ["rayon"] }
itertools = "0.10"
log = "0.4"
marlu = "0.2.3"
regex = "1.4"
thiserror = "1.0"

[dev-dependencies]
assert_cli = "0.6"
criterion = "0.3"
csv = "1.1"
float-cmp = "0.9"
glob = "0.3"
lexical = "6.0"
ndarray = { version = ">=0.15.4,<0.16", features = ["approx-0_5"] }
tempfile = "3.2"

[[bench]]
name = "bench"
# don't use path here, it breaks things.
harness = false

[profile.bench]
opt-level = 3

[package.metadata.cargo-udeps.ignore]

