[package]
name = "birli"
description = "A preprocessing pipeline for the Murchison Widefield Array"
version = "0.6.0"
readme = "README.md"
homepage = "https://github.com/MWATelescope/Birli"
repository = "https://github.com/MWATelescope/Birli"
authors = [
    "Derwent McElhinney <derwent.mcelhinney@curtin.edu.au>",
    "Christopher H. Jordan <christopherjordan87@gmail.com>",
    "Greg Sleap <greg.sleap@curtin.edu.au>",
]
edition = "2021"
rust-version = "1.58"
license = "MPL-2.0"
keywords = ["radioastronomy", "mwa", "astronomy", "aoflagger", "cotter"]
categories = ["science", "parsing"]
exclude = ["tests/*", ".vscode/*", ".github/*", ".talismanrc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["aoflagger"]
aoflagger = ["aoflagger_sys"]
erfa-static = ["marlu/erfa-static"]
cfitsio-static = ["marlu/cfitsio-static"]
all-static = ["erfa-static", "cfitsio-static"]

[dependencies]
aoflagger_sys = { version = "0.1.*", optional = true }
byteorder = "1.4.3"
cfg-if = "1.0.0"
clap = { version = "3.1.5", features = ["cargo"] }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
derive_builder = "0.10.2"
env_logger = "0.9"
indicatif = { version = "0.16", features = ["rayon"] }
itertools = "0.10"
lazy_static = "1.4.*"
log = "0.4"
marlu = "0.6.0"
prettytable-rs = "0.8.0"
regex = "1.4"
thiserror = "1.0"

[dev-dependencies]
approx = { version = "0.5.*", features = ["num-complex"] }
assert_cli = "0.6"
criterion = "0.3"
csv = "1.1"
float-cmp = "0.9"
glob = "0.3"
lexical = "6.0"
ndarray = { version = ">=0.15.4,<0.16", features = ["approx-0_5"] }
tempfile = "3.3"

[build-dependencies]
built = { version = "0.5.*", features = ["chrono", "git2"] }

[[bench]]
name = "bench"
# don't use path here, it breaks things.
harness = false

[profile.bench]
opt-level = 3

[package.metadata.cargo-udeps.ignore]

[patch.crates-io]
# marlu = { path = "../Marlu" }
# marlu = { git = "https://github.com/MWATelescope/Marlu.git", branch = "..." }