[package]
name = "birli"
description = "A preprocessing pipeline for the Murchison Widefield Array"
version = "0.11.0"
readme = "README.md"
homepage = "https://github.com/MWATelescope/Birli"
repository = "https://github.com/MWATelescope/Birli"
authors = [
    "Dev Null <dev.null@curtin.edu.au>",
    "Christopher H. Jordan <christopherjordan87@gmail.com>",
    "Greg Sleap <greg.sleap@curtin.edu.au>",
    "Luke A. Williams <luke.a.williams@curtin.edu.au>",
]
edition = "2021"
rust-version = "1.64"
license = "MPL-2.0"
keywords = ["radioastronomy", "mwa", "astronomy", "aoflagger", "cotter"]
categories = ["science", "parsing"]
exclude = ["tests/*", ".vscode/*", ".github/*", ".talismanrc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["aoflagger", "cli"]

# Use aoflagger to detect RFI
aoflagger = ["aoflagger_sys"]

# Use command-line-only dependencies
cli = ["clap", "env_logger", "prettytable-rs", "shlex"]

# Compile cfitsio statically and link it
cfitsio-static = ["marlu/cfitsio-static"]

# Compile all C dependencies statically and link them
all-static = ["cfitsio-static"]

[dependencies]
byteorder = "1.4.3"
cfg-if = "1.0.0"
derive_builder = "0.11.1"
indicatif = { version = "0.17.0", features = ["rayon"] }
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.0"
marlu = "0.11.0"
regex = "1.4.0"
thiserror = "1.0.0"

# aoflagger feature
aoflagger_sys = { version = "0.1.1", optional = true }

# cli feature
clap = { version = "3.1.8", features = ["cargo"], optional = true }
env_logger = { version = "0.9.0", optional = true }
prettytable-rs = { version = "0.10.0", optional = true }
shlex = { version = "1.1.0", optional = true }

[dev-dependencies]
approx = { version = "0.5.0", features = ["num-complex"] }
assert_cli = "0.6"
criterion = "0.4.0"
csv = "1.1"
float-cmp = "0.9"
glob = "0.3"
lexical = "6.0"
marlu = { version = "0.11.0", features = ["approx"] }
ndarray = { version = "0.15.4", features = ["approx-0_5"] }
tempfile = "3.3"

[build-dependencies]
built = { version = "~0.7.3", default-features = false, features = [
    "chrono",
    "git2",
] }

[[bin]]
name = "birli"
test = true
required-features = ["cli"]

[[bench]]
name = "bench"
# don't use path here, it breaks things.
harness = false

[profile.bench]
opt-level = 3

[package.metadata.cargo-udeps.ignore]

[patch.crates-io]
# marlu = { path = "../Marlu" }
marlu = { git = "https://github.com/MWATelescope/Marlu", branch = "birli-150" }
# mwalib = { path = "../mwalib" }
# mwalib = { git = "https://github.com/MWATelescope/mwalib", branch = "digital_gains_plus" }
